[gd_scene load_steps=9 format=3 uid="uid://celfpy0b00dbu"]

[ext_resource type="Script" path="res://Managers/Game Manager.gd" id="1_m182s"]
[ext_resource type="Script" path="res://Managers/Menu Manager.gd" id="2_dltqq"]
[ext_resource type="Texture2D" uid="uid://3yd3o4eodxoi" path="res://Sprites/new_menu.jpg" id="2_wrutu"]
[ext_resource type="FontFile" uid="uid://cryabcm673r2a" path="res://GUI/Minecraft.ttf" id="3_kempm"]
[ext_resource type="Theme" uid="uid://bkrtaty4xnk1j" path="res://GUI/Theme.tres" id="4_pew4u"]
[ext_resource type="Texture2D" uid="uid://hqr365ap2jws" path="res://GUI/Fade_effect_line.png" id="5_ojsxl"]
[ext_resource type="Texture2D" uid="uid://b0hkhsbqsus6q" path="res://Sprites/credit.png" id="6_dbu3n"]
[ext_resource type="PackedScene" uid="uid://unnab30yeuuc" path="res://Utility/ac.tscn" id="6_uq4ba"]

[node name="Menu Manager" type="Node"]
script = ExtResource("2_dltqq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Background" type="Sprite2D" parent="CanvasLayer"]
z_index = -3
position = Vector2(1003.5, 173)
scale = Vector2(1.9541, 1.77539)
texture = ExtResource("2_wrutu")

[node name="LoadButton" type="Button" parent="CanvasLayer" node_paths=PackedStringArray("shortcut_context")]
visible = false
modulate = Color(1, 1, 1, 0.784314)
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -6.0
offset_right = 106.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
shortcut_context = NodePath("../..")
theme_override_fonts/font = ExtResource("3_kempm")
text = "Load"

[node name="StartButton" type="Button" parent="CanvasLayer" node_paths=PackedStringArray("shortcut_context")]
modulate = Color(1, 1, 1, 0.784314)
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = 73.0
offset_right = 106.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
shortcut_context = NodePath("../..")
theme_override_fonts/font = ExtResource("3_kempm")
text = "Start"

[node name="StoreButton" type="Button" parent="CanvasLayer" node_paths=PackedStringArray("shortcut_context")]
modulate = Color(1, 1, 1, 0.784314)
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 156.0
offset_right = 107.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
shortcut_context = NodePath("../..")
theme_override_fonts/font = ExtResource("3_kempm")
text = "Store"

[node name="CreditsButton" type="Button" parent="CanvasLayer" node_paths=PackedStringArray("shortcut_context")]
modulate = Color(1, 1, 1, 0.784314)
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 244.0
offset_right = 107.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
shortcut_context = NodePath("../..")
theme_override_fonts/font = ExtResource("3_kempm")
text = "Credits"

[node name="StorePanel" type="Panel" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0.784314)
z_index = 4
z_as_relative = false
custom_minimum_size = Vector2(300, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_pew4u")

[node name="AC" type="RichTextLabel" parent="CanvasLayer/StorePanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 22.0
offset_right = 102.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[center]AC Multiplier"
autowrap_mode = 0

[node name="XP" type="RichTextLabel" parent="CanvasLayer/StorePanel"]
layout_mode = 0
offset_left = 102.0
offset_top = 22.0
offset_right = 198.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[center]XP Multiplier"
autowrap_mode = 0

[node name="Drop" type="RichTextLabel" parent="CanvasLayer/StorePanel"]
layout_mode = 0
offset_left = 198.0
offset_top = 22.0
offset_right = 294.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[center]Drop Multiplier"
autowrap_mode = 0

[node name="AC_Current" type="RichTextLabel" parent="CanvasLayer/StorePanel"]
modulate = Color(0.513726, 0.513726, 0.513726, 1)
layout_mode = 0
offset_left = 6.0
offset_top = 38.0
offset_right = 102.0
offset_bottom = 56.0
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[center]Current: 0"
autowrap_mode = 0

[node name="XP_Current" type="RichTextLabel" parent="CanvasLayer/StorePanel"]
modulate = Color(0.513726, 0.513726, 0.513726, 1)
layout_mode = 0
offset_left = 102.0
offset_top = 38.0
offset_right = 198.0
offset_bottom = 56.0
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[center]Current: 0"
autowrap_mode = 0

[node name="Drop_Current" type="RichTextLabel" parent="CanvasLayer/StorePanel"]
modulate = Color(0.513726, 0.513726, 0.513726, 1)
layout_mode = 0
offset_left = 198.0
offset_top = 38.0
offset_right = 294.0
offset_bottom = 56.0
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[center]Current: 0"
autowrap_mode = 0

[node name="AC_Cost" type="RichTextLabel" parent="CanvasLayer/StorePanel"]
modulate = Color(0.513726, 0.513726, 0.513726, 1)
layout_mode = 0
offset_left = 6.0
offset_top = 54.0
offset_right = 102.0
offset_bottom = 72.0
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[center]Cost: 0"
autowrap_mode = 0

[node name="XP_Cost" type="RichTextLabel" parent="CanvasLayer/StorePanel"]
modulate = Color(0.513726, 0.513726, 0.513726, 1)
layout_mode = 0
offset_left = 102.0
offset_top = 54.0
offset_right = 198.0
offset_bottom = 72.0
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[center]Cost: 0"
autowrap_mode = 0

[node name="Drop_Cost" type="RichTextLabel" parent="CanvasLayer/StorePanel"]
modulate = Color(0.513726, 0.513726, 0.513726, 1)
layout_mode = 0
offset_left = 198.0
offset_top = 54.0
offset_right = 294.0
offset_bottom = 72.0
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[center]Cost: 0"
autowrap_mode = 0

[node name="AC_Buy" type="Button" parent="CanvasLayer/StorePanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 70.0
offset_right = 70.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 10
text = "Buy"

[node name="XP_Buy" type="Button" parent="CanvasLayer/StorePanel"]
layout_mode = 0
offset_left = 126.0
offset_top = 70.0
offset_right = 166.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 10
text = "Buy"

[node name="Drop_Buy" type="Button" parent="CanvasLayer/StorePanel"]
layout_mode = 0
offset_left = 222.0
offset_top = 70.0
offset_right = 262.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 10
text = "Buy"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/StorePanel"]
layout_mode = 0
offset_top = 6.0
offset_right = 302.0
offset_bottom = 22.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]Total Ascension Currency:"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
z_index = 1
custom_minimum_size = Vector2(400, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -192.0
offset_right = 200.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "[center]Endless Ascension"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(963.714, 403.333)
scale = Vector2(2.42857, 67.6667)
texture = ExtResource("5_ojsxl")

[node name="ExitButton" type="Button" parent="CanvasLayer" node_paths=PackedStringArray("shortcut_context")]
modulate = Color(1, 1, 1, 0.784314)
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 330.0
offset_right = 107.0
offset_bottom = 394.0
grow_horizontal = 2
grow_vertical = 2
shortcut_context = NodePath("../..")
theme_override_fonts/font = ExtResource("3_kempm")
text = "Exit"

[node name="Credits" type="Container" parent="CanvasLayer"]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -98.0
offset_right = 1912.0
offset_bottom = 302.0
grow_vertical = 2

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/Credits"]
z_index = 1
position = Vector2(1003.5, 173)
scale = Vector2(1.9541, 1.77539)
texture = ExtResource("6_dbu3n")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Credits"]
z_index = 1
custom_minimum_size = Vector2(1900, 2000)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Map Sprites by: Rafaelmatos

Ability Sprites by: Creativekind, Pimen

Character Sprites by: Johannes Sj√∂lund (wulax), Michael Whitlock (bigbeargames), Matthew Krohn (makrohn), Nila122, David Conway Jr. (JaidynReiman), Carlo Enrico Victoria (Nemisys), Thane Brimhall (pennomi), bluecarrot16, Luke Mehl, Benjamin K. Smith (BenCreating), ElizaWy, MuffinElZangano, Durrani, kheftel, Stephen Challener (Redshrike), TheraHedwig, Evert, Pierre Vigier (pvigier), Eliza Wyatt (ElizaWy), Johannes Sj?lund (wulax), Sander Frenken (castelonia), dalonedrau, Lanea Zimmerman (Sharm),

Sprites contributed as part of the Liberated Pixel Cup project from OpenGameArt.org: http://opengameart.org/content/lpc-collection

License: Creative Commons Attribution-ShareAlike 3.0 (CC-BY-SA 3.0) http://creativecommons.org/licenses/by-sa/3.0/

Detailed credits: https://github.com/LiberatedPixelCup/Universal-LPC-Spritesheet-Character-Generator/blob/master/CREDITS.csv"

[node name="CreditsButton" type="Button" parent="CanvasLayer/Credits" node_paths=PackedStringArray("shortcut_context")]
modulate = Color(1, 1, 1, 0.784314)
z_index = 1
z_as_relative = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
shortcut_context = NodePath("../../..")
theme_override_fonts/font = ExtResource("3_kempm")
text = "Back"

[node name="Game Manager" type="Node2D" parent="."]
script = ExtResource("1_m182s")

[node name="Level" type="Node" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/Game.tscn")
spawn_path = NodePath("../Level")
spawn_limit = 1

[node name="AC" parent="." instance=ExtResource("6_uq4ba")]

[connection signal="pressed" from="CanvasLayer/LoadButton" to="." method="_load_game"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StoreButton" to="." method="_open_store"]
[connection signal="pressed" from="CanvasLayer/CreditsButton" to="." method="_open_credits"]
[connection signal="pressed" from="CanvasLayer/StorePanel/AC_Buy" to="." method="_buy_ascension_currency"]
[connection signal="pressed" from="CanvasLayer/StorePanel/XP_Buy" to="." method="_buy_xp_gain"]
[connection signal="pressed" from="CanvasLayer/StorePanel/Drop_Buy" to="." method="_buy_drop_rate"]
[connection signal="pressed" from="CanvasLayer/ExitButton" to="." method="_exit_game"]
[connection signal="pressed" from="CanvasLayer/Credits/CreditsButton" to="." method="_close_credits"]
